log_output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
        - name: shared-log
          persistentVolumeClaim:
            claimName: log-claim
      containers:
        - name: log-output-write
          image: prmckinney/k3d_log_output_write:1.10
          volumeMounts:
            - name: shared-log
              mountPath: /usr/src/app/files
        - name: log-output-read
          image: prmckinney/k3d_log_output_read:2.1
          volumeMounts:
            - name: shared-log
              mountPath: /usr/src/app/files
