log_output/manifests/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-stset
  namespace: exercises
spec:
  serviceName: postgres-svc
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      volumes:
        - name: config
          configMap:
            name: log-configmap
            items:
              - key: "init.sql"
                path: "init.sql"
      containers:
        - name: postgres
          image: postgres:18.4
          ports:
            - name: web
              containerPort: 6379
          volumeMounts:
            - name: postgres-data-storage
              mountPath: /var/lib/postgresql
            - name: config
              mountPath: "/docker-entrypoint-initdb.d"
              readOnly: true
  volumeClaimTemplates:
    - metadata:
        name: postgres-data-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 100Mi
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  namespace: exercises
  labels:
    app: postgres
spec:
  ports:
    - port: 6379
      name: web
  clusterIP: None
  selector:
    app: postgres
